--- a/sem_05/chess.ipynb
+++ b/sem_05/chess.ipynb
@@ -50,7 +50,7 @@
     "    used = [False for _ in range(vert_num)]\n",
     "\n",
     "    dist[src] = 0\n",
-    "    pq = [(0, src)]  
+    "    pq = [(0, src)] \n",
     "\n",
     "    while pq:\n",
     "        d, u = heapq.heappop(pq)\n",
