--- a/sem_04/graphs_cycle_and_paths.ipynb
+++ b/sem_04/graphs_cycle_and_paths.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "79d0b15b-7677-4c0f-b99d-5841397fbe95",
+   "execution_count": 21,
+   "id": "6802ab0d-ee0e-49f3-bf37-3592db317ec4",
    "metadata": {},
    "outputs": [],
    "source": [
     "edge_list = [\n",
-    "    [0, 1], [0, 3],\n",
-    "    [1, 3], \n",
-    "    [2, 3], \n",
-    "    [4, 0], [4, 3],\n",
-    "    [5, 0]\n",
+    "    [0, 1], [0, 2], [0, 3],\n",
+    "    [1, 2],  [1, 4], \n",
+    "    [2, 4],  \n",
+    "    [3, 4],\n",
+    "    [4, 5], \n",
+    "    [5, 3]\n",
     "]\n",
     "vert_num = 6\n",
     "\n",
@@ -20,89 +21,101 @@
     "for edge in edge_list:\n",
     "    u = edge[0]\n",
     "    v = edge[1]\n",
-    "    adj_list[u].append(v)"
+    "    adj_list[u].append(v)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b2f03490-db3b-40be-97fc-c244ddff2085",
+   "id": "009b8fa9-43a2-4a50-bfdb-dc7357295847",
    "metadata": {},
    "source": [
-    "## Код для поиска цикла в графе"
+    "## Код для поиска цикла в графе\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e03a095f-bda4-43fa-9bb3-1f3dfb697528",
+   "execution_count": 41,
+   "id": "f571866d-eafe-405b-9dc1-871259c6bfb7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cycle found: 0->2->4->5->0\n"
+      "Found cycle: 4->5->3\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 40\u001b[0m\n\u001b[0;32m     37\u001b[0m     timer \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     38\u001b[0m     tout[v] \u001b[38;5;241m=\u001b[39m timer\n\u001b[1;32m---> 40\u001b[0m \u001b[43mdfs\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[41], line 21\u001b[0m, in \u001b[0;36mdfs\u001b[1;34m(v, p)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m colors[u] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mg\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m u \u001b[38;5;241m!=\u001b[39m p:\n\u001b[0;32m     20\u001b[0m     cur \u001b[38;5;241m=\u001b[39m v\n\u001b[1;32m---> 21\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mcur\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m!=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mu\u001b[49m:\n\u001b[0;32m     22\u001b[0m         cycle\u001b[38;5;241m.\u001b[39mappend(cur)\n\u001b[0;32m     23\u001b[0m         cur \u001b[38;5;241m=\u001b[39m parents[cur]\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "\n",
     "g = adj_list\n",
-    "colors = [\"w\" for _ in range(vert_num)]\n",
-    "cycle = []\n",
     "\n",
-    "def dfs(v, start, visited=[]):\n",
-    "    global cycle\n",
-    "    visited.append(v)\n",
+    "parents = [None for _ in range(vert_num)]\n",
+    "colors = [\"w\" for _ in range(vert_num)]\n",
+    "timer = 0\n",
+    "tin = [None for _ in range(vert_num)]\n",
+    "tout = [None for _ in range(vert_num)]\n",
+    "\n",
+    "def dfs(v, p = -1):\n",
+    "    global timer\n",
+    "    cycle = []\n",
+    "    cycle_last = []\n",
+    "    parents[v] = p\n",
     "    colors[v] = \"g\"\n",
+    "    timer += 1\n",
+    "    tin[v] = timer\n",
     "    \n",
     "    for u in g[v]:\n",
-    "        if u in visited:\n",
-    "            cycle = visited[visited.index(u):] + [u]\n",
+    "        if colors[u] == \"g\" and u != p:\n",
+    "            cur = v\n",
+    "            while cur != u:\n",
+    "                cycle.append(cur)\n",
+    "                cur = parents[cur]\n",
+    "            cycle.append(u)\n",
+    "            \n",
+    "            cycle_str = '->'.join(map(str, cycle[::-1]))\n",
+    "            print(\"Found cycle:\", cycle_str)\n",
     "            return\n",
+    "        \n",
+    "        elif colors[u] == \"b\":\n",
+    "            continue\n",
+    "        \n",
     "        elif colors[u] == \"w\":\n",
-    "            dfs(u, start, visited.copy())\n",
-    "\n",
+    "            dfs(u, v)\n",
+    "    \n",
     "    colors[v] = \"b\"\n",
+    "    timer += 1\n",
+    "    tout[v] = timer\n",
     "\n",
-    "def find_cycle():\n",
-    "    for v in range(vert_num):\n",
-    "        if colors[v] == \"w\":\n",
-    "            dfs(v, v)\n",
-    "\n",
-    "find_cycle()\n",
-    "if cycle:\n",
-    "    cycle_str = '->'.join(map(str, cycle))\n",
-    "    print(\"Cycle found:\", cycle_str)\n",
-    "else:\n",
-    "    print(\"No cycle found.\")"
+    "dfs(0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df1e51db-411c-43ca-9249-2cdd1df75583",
+   "id": "f5d957a7-8982-4bbc-a7ce-2a050608316d",
    "metadata": {},
    "source": [
-    "## Дальше код для поиска путей\n"
+    "## Дальше код для поиска путей"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "26e21270-71e1-4473-961c-519a221f32fa",
+   "execution_count": null,
+   "id": "ef0ef4a0-4dd0-4872-9ff4-d7670eff6303",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 6, 2, 4, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "g = adj_list\n",
     "parents = [None for i in range(vert_num)]\n",
     "colors = [\"w\" for i in range(vert_num)]\n",
@@ -156,14 +169,6 @@
     "\n",
     "print(path)    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c68e200a-a0dd-4a77-8f9e-ecf27dc1413b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
